--- a/Index.html
+++ b/Index.html
@@ -17,16 +17,15 @@
             <br>
 
             <div class="form"> 
-
                 <form name="formuser" action="Simular.php" method="POST">
                     <h4 style="padding-left: 2cm;">Insira seus dados:</h4> <!--Cara tira essa linha daqui--> 
                     Nome: <input type="text" name="nome" id="nome" size="30" placeholder="Ex: João da Costa"> <br>               <!--Poderiamos validar com HTML5 com "REQUIRED"-->
                     E-Mail: <input type="email" name="email" id="email" size="29" placeholder="example@email.com"> <br>          <!--Poderiamos validar com HTML5 com "REQUIRED"-->
                     Fone: <input type="number" name="fone" id="fone" size="31" placeholder="51990909090"> <br>                   <!--Poderiamos validar com HTML5 com "REQUIRED"-->
-                    Valor Desejado: <input type="number" name="valor" id="valor" size="5" placeholder="min=1000 max=100000"> <br><!--Poderiamos validar com HTML5 com "REQUIRED"-->
+                    Valor Desejado: <input type="number" name="valor" id="valor" size="5" placeholder="min=1.000 max=100.000"> <br><!--Poderiamos validar com HTML5 com "REQUIRED"-->
                     Nº de Parcela: <input type="number" name="parcela" id="parcela" size="20" placeholder="Até 24x"> <br>        <!--Poderiamos validar com HTML5 com "REQUIRED""-->
                     <br> <br>
-                    <input type="submit" onclick="return validar()">
+                    <input class="button" type="submit" onclick="return validar()">
                 </form>
 
             </div>
