--- a/Index.html
+++ b/Index.html
@@ -26,7 +26,7 @@
                     Valor Desejado: <input type="number" name="valor" id="valor" size="5" placeholder="min=1000 max=100000"> <br><!--Poderiamos validar com HTML5 com "REQUIRED"-->
                     Nº de Parcela: <input type="number" name="parcela" id="parcela" size="20" placeholder="Até 24x"> <br>        <!--Poderiamos validar com HTML5 com "REQUIRED""-->
                     <br> <br>
-                    <input type="submit" onclick="return validar()">
+                    <input type="submit" onclick= " validar()">
                 </form>
             </div>
 
